# parensnet

./: .gitignore  .gitmodules  .lintr  CMakeLists.txt  README.md  compile_flags.txt  env_no_cdeps.yml  environment.yml  pyproject.toml  pytest.toml
config/hvg/: hvg100.txt  hvg1000.txt  hvg1100.txt  hvg1200.txt  hvg1300.txt  hvg1400.txt  hvg1600.txt  hvg1700.txt  hvg1800.txt  hvg1900.txt  hvg1K500.txt  hvg200.txt  hvg2000.txt  hvg2100.txt  hvg2200.txt  hvg2300.txt  hvg2400.txt  hvg2500.txt  hvg2600.txt  hvg2700.txt  hvg2800.txt  hvg2900.txt  hvg300.txt  hvg3000.txt  hvg3100.txt  hvg3200.txt  hvg3300.txt  hvg3400.txt  hvg3500.txt  hvg3600.txt  hvg3700.txt  hvg3800.txt  hvg3900.txt  hvg400.txt  hvg4000.txt  hvg4100.txt  hvg4200.txt  hvg4300.txt  hvg4400.txt  hvg4500.txt  (+9 more)
config/pbmc20k_2500/: pbmc20k_2500.yml  pbmc20k_2500_H100.yml  pbmc20k_2500_H1000.yml  pbmc20k_2500_H200.yml  pbmc20k_2500_H300.yml  pbmc20k_2500_H400.yml  pbmc20k_2500_H500.yml  pbmc20k_2500_S10x4p.yml  pbmc20k_2500_S10x5p.yml  pbmc20k_2500_S10x6p.yml  pbmc20k_2500_S6x4p.yml  pbmc20k_2500_S6x5p.yml  pbmc20k_2500_S6x6p.yml  pbmc20k_2500_S8x4p.yml  pbmc20k_2500_S8x5p.yml  pbmc20k_2500_S8x6p.yml  pbmc20k_2500_SCunion6x4p.yml  pbmc20k_2500_SQ6x4px30.yml  pbmc20k_2500_SQ6x4px50.yml  pbmc20k_2500_SQunionx30.yml  pbmc20k_2500_SQunionx50.yml  pbmc20k_2500_Sunion.yml
config/pbmc20k_500/: pbmc20k_500.yml  pbmc20k_500_H100.yml  pbmc20k_500_H100_ph5.yml  pbmc20k_500_H100_zarr.yml  pbmc20k_500_H200.yml  pbmc20k_500_H300.yml  pbmc20k_500_H400.yml  pbmc20k_500_S10x4p.yml  pbmc20k_500_S10x5p.yml  pbmc20k_500_S10x6p.yml  pbmc20k_500_S6x4p.yml  pbmc20k_500_S6x5p.yml  pbmc20k_500_S6x6p.yml  pbmc20k_500_S8x4p.yml  pbmc20k_500_S8x5p.yml  pbmc20k_500_S8x6p.yml  pbmc20k_500_SCunion6x4p.yml  pbmc20k_500_SQ6x4px30.yml  pbmc20k_500_SQ6x4px50.yml  pbmc20k_500_SQunionx30.yml  pbmc20k_500_SQunionx50.yml  pbmc20k_500_Sunion.yml
config/pbmc20k_5k/: pbmc20k_5k.yml  pbmc20k_5k_H1000.yml  pbmc20k_5k_H1500.yml  pbmc20k_5k_H500.yml  pbmc20k_5k_S10x4p.yml  pbmc20k_5k_S10x5p.yml  pbmc20k_5k_S10x6p.yml  pbmc20k_5k_S6x4p.yml  pbmc20k_5k_S6x5p.yml  pbmc20k_5k_S6x6p.yml  pbmc20k_5k_S8x4p.yml  pbmc20k_5k_S8x5p.yml  pbmc20k_5k_S8x6p.yml  pbmc20k_5k_SCunion6x4p.yml  pbmc20k_5k_SQ6x4px30.yml  pbmc20k_5k_SQ6x4px50.yml  pbmc20k_5k_SQunionx30.yml  pbmc20k_5k_SQunionx50.yml  pbmc20k_5k_Sunion.yml  pbmc20k_5k_sampled.yml
config/rsc/: rsc100k_10k_SCunion6x4p.yml  rsc100k_10k_SQ2x4p.yml  rsc100k_10k_SQ2x5p.yml  rsc100k_10k_SQ4x4p.yml  rsc100k_10k_SQ4x5p.yml  rsc100k_10k_SQ6x4p.yml  rsc100k_10k_SQ6x4px30.yml  rsc100k_10k_SQ8x4p.yml  rsc100k_10k_Sunionlmr.yml  rsc100k_12k_Sunionlmr.yml  rsc100k_1k_Sunionlmr.yml  rsc100k_3k_Sunionlmr.yml  rsc100k_5k_Sunionlmr.yml  rsc100k_8k_SCunion6x4p.yml  rsc100k_8k_SQ2x4p.yml  rsc100k_8k_SQ2x5p.yml  rsc100k_8k_SQ4x4p.yml  rsc100k_8k_SQ4x5p.yml  rsc100k_8k_SQ6x4p.yml  rsc100k_8k_SQ6x4px30.yml  rsc100k_8k_SQ6x5p.yml  rsc100k_8k_SQ8x4p.yml  rsc100k_8k_SQ8x5p.yml  rsc100k_8k_Sunionlmr.yml
include/parensnet/: data_py.hpp  mpi_hdf.hpp  py_types.hpp  utils.hpp
src/: mod_parensnet.cpp
src/parensnet/: bayesian_blocks.py  context.py  data.py  distributed.py  gbr.py  imeasures.py  misi.py  mpi_cli.py  pidc.py  pidc_test.py  types.py  wflow_cli.py
src/parensnet/cli/: mpi.py  wflow.py
src/parensnet/mvim/: bayesian_blocks.py  context.py  distributed.py  imeasures.py  misi.py  rv.py
src/parensnet/workflow/: context.py  misi.py  puc.py  union.py  util.py
tests/: test_cpp_ext.py  test_lmr.py  test_puc.py
