#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "parensnet"
version = "1.0"
description = "Parallel Ensemble Network"
authors = [{ name = "Sriram P C", email = "srirampc@gatech.edu" }]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["Data-driven", "Computational Biology", "Gene Regulatory Networks"]
dependencies = [
    "dask",
    "devtools",
    "h5py",
    "numpy",
    "pandas",
    "polars",
    "psutil",
    "pydantic",
    "pyyaml",
    "scipy",
    "scikit-learn",
    "tqdm",
    "anndata",
    "arboreto",
    "lightgbm",
    "scanpy",
    "xgboost",
]

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
# A table of defines to pass to CMake when configuring the project. Additive.
cmake.define = { PARENSNET_PROJECT_NAME = "scement" }
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
cmake.verbose = true
logging.level = "INFO"


[tool.setuptools.packages.find]
include = ["parensnet"]

[tool.pyright]
include = ["parensnet", "eval", "data"]
exclude = ["**/__pycache__"]

[tool.black]
line-length = 88
target-version = ["py310"]
